Pugliese: new dp pgm code

--- a/Code/Python/PGM_MINUTEMEN_APPROACH/Jupyther/dp_pgm_minutemen_istat_synt_challenge.ipynb
+++ b/Code/Python/PGM_MINUTEMEN_APPROACH/Jupyther/dp_pgm_minutemen_istat_synt_challenge.ipynb
@@ -18,11 +18,21 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "# All imports"
+      ],
+      "metadata": {
+        "id": "OgbUsjiHe9pS"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import os\n",
         "os.system('pip install numpy')\n",
         "os.system('pip install gdown')\n",
+        "os.system('pip install jsonschema')\n",
         "import platform\n",
         "import numpy\n",
         "import pandas\n",
@@ -34,6 +44,15 @@
       },
       "execution_count": 1,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# All Globals"
+      ],
+      "metadata": {
+        "id": "NU8p30AHfA4h"
+      }
     },
     {
       "cell_type": "code",
@@ -67,7 +86,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CcTw49-X3QLt",
-        "outputId": "c5e7d0ff-4d3d-467f-a7f6-af1850c6ae70"
+        "outputId": "51072de7-75f6-4bea-ead7-8e80ee2ec255"
       },
       "execution_count": 3,
       "outputs": [
@@ -114,7 +133,7 @@
           "height": 87
         },
         "id": "9O_yLLQA3thl",
-        "outputId": "64056cda-b1ab-4b0d-efb6-90bad316b2e6"
+        "outputId": "f7d2186b-096c-451e-e61b-6f76e18642b9"
       },
       "execution_count": 4,
       "outputs": [
@@ -159,7 +178,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "N9Hu52yqkKsu",
-        "outputId": "3b4e79fa-840f-403c-a04d-c8e2fe6ecace"
+        "outputId": "693aadb4-e6cc-4bf3-836b-5cf984061154"
       },
       "outputs": [
         {
@@ -188,7 +207,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HHpg3YEwmErS",
-        "outputId": "8a124081-f5a9-48cd-ebd1-b50470740bd3"
+        "outputId": "d6c05caa-b540-436c-8623-b164a2b01db0"
       },
       "execution_count": 6,
       "outputs": [
@@ -214,7 +233,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DffXF880mgxj",
-        "outputId": "678eeb27-7786-4be9-a1ac-53b62fab2d5a"
+        "outputId": "76bb0335-2a5f-42ce-c6c6-4525a00e7d60"
       },
       "execution_count": 7,
       "outputs": [
@@ -240,7 +259,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "esUujxsqn-nZ",
-        "outputId": "a21f53c7-761a-4a36-f65d-a2e509d92f58"
+        "outputId": "a04ccac4-92fe-45d7-a366-ba97357bc1dd"
       },
       "execution_count": 8,
       "outputs": [
@@ -268,18 +287,22 @@
     {
       "cell_type": "code",
       "source": [
-        "if not os.path.exists(\"./satgpa.csv\"):\n",
-        "    os.system('gdown --id \"1NNVF1LhBDkW_KKp5_QW8cAiQDFatzWMy\" --output \"./satgpa.csv\"')\n",
+        "if benchmark == True: \n",
+        "  if not os.path.exists(\"./adult.csv\"):\n",
+        "      os.system('gdown --id \"1pvGlZG0ypswgey-rzvxdZev5F-PYnHVz\" --output \"./adult.csv\"')\n",
+        "else: \n",
+        "  if not os.path.exists(\"./satgpa.csv\"):\n",
+        "      os.system('gdown --id \"1NNVF1LhBDkW_KKp5_QW8cAiQDFatzWMy\" --output \"./satgpa.csv\"')\n",
         "\n",
-        "'''\n",
-        "if not os.path.exists(\"./acs_dataset.zip\"):\n",
-        "    os.system('gdown --id \"1mKZfDieGBJP-cS-R7_i3zVKVawXThfUc\" --output \"./acs_dataset.zip\"')\n",
-        "    if OS == \"Linux\":\n",
-        "        os.system('unzip -o -n \"./acs_dataset.zip\" -d \"./\"')\n",
-        "'''\n",
+        "  '''\n",
+        "  if not os.path.exists(\"./acs_dataset.zip\"):\n",
+        "      os.system('gdown --id \"1mKZfDieGBJP-cS-R7_i3zVKVawXThfUc\" --output \"./acs_dataset.zip\"')\n",
+        "      if OS == \"Linux\":\n",
+        "          os.system('unzip -o -n \"./acs_dataset.zip\" -d \"./\"')\n",
+        "  '''\n",
         "\n",
-        "if not os.path.exists(\"./satgpa_parameters.json\"):\n",
-        "    os.system('gdown --id \"1sA-sWA8WktSM1yfvY0ceg5woaVyIFyfs\" --output \"./satgpa_parameters.json\"')"
+        "  if not os.path.exists(\"./satgpa_parameters.json\"):\n",
+        "      os.system('gdown --id \"1sA-sWA8WktSM1yfvY0ceg5woaVyIFyfs\" --output \"./satgpa_parameters.json\"')"
       ],
       "metadata": {
         "id": "gif6H4EZvoNM"
@@ -299,18 +322,21 @@
     {
       "cell_type": "code",
       "source": [
-        "#if benchmark == True: \n",
-        "#  os.system('unzip -o -n \"./acs_dataset.zip\" -d \"./\"')\n",
-        "#  !python ./nist-synthetic-data-2021/extensions/schemagen.py ./nist-synthetic-data-2021/extensions/datasets/raw/adult.csv --max_categorical 40"
+        "if benchmark == True: \n",
+        "  #os.system('python ./nist-synthetic-data-2021/extensions/schemagen.py ./adult.csv --max_categorical 40')\n",
+        "  !python ./nist-synthetic-data-2021/extensions/schemagen.py /content/nist-synthetic-data-2021/extensions/datasets/raw/adult.csv --max_categorical 40\n",
+        "else:\n",
+        "  os.system('python ./nist-synthetic-data-2021/extensions/schemagen.py ./satgpa.csv --max_categorical 100')\n",
+        "  #!python ./nist-synthetic-data-2021/extensions/schemagen.py ./satgpa.csv --max_categorical 100"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "OK1ehZ-AmjBy",
-        "outputId": "f2a5e332-9c6c-43ba-b2ef-0e60930f741d"
+        "outputId": "f96b7aed-871e-4bfa-fffe-aa957cdfd128"
       },
-      "execution_count": 22,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -343,8 +369,8 @@
     {
       "cell_type": "code",
       "source": [
-        "#os.system('python ./nist-synthetic-data-2021/extensions/transform.py --transform discretize --df \"./satgpa.csv\" --schema \"./satgpa_parameters.json\" --output_dir \"./\"')\n",
-        "!python ./nist-synthetic-data-2021/extensions/transform.py --transform discretize --df \"./satgpa.csv\" --schema \"./satgpa_parameters.json\" --output_dir \"./\""
+        "os.system('python ./nist-synthetic-data-2021/extensions/transform.py --transform discretize --df \"./satgpa.csv\" --schema \"./satgpa_parameters.json\" --output_dir \"./\"')\n",
+        "#!python ./nist-synthetic-data-2021/extensions/transform.py --transform discretize --df \"./satgpa.csv\" --schema \"./satgpa_parameters.json\" --output_dir \"./\""
       ],
       "metadata": {
         "id": "w687fFK28E2g"
@@ -390,8 +416,8 @@
     {
       "cell_type": "code",
       "source": [
-        "#os.system('python ./nist-synthetic-data-2021/extensions/adaptive_grid.py --dataset \"./discretized.csv\" --domain \"./domain.json\" --save \"./satgpa_discretized_synthetic.csv\" --epsilon 10')\n",
-        "!python ./nist-synthetic-data-2021/extensions/adaptive_grid.py --dataset \"./discretized.csv\" --domain \"./domain.json\" --save \"./satgpa_discretized_synthetic.csv\" --epsilon 10"
+        "os.system('python ./nist-synthetic-data-2021/extensions/adaptive_grid.py --dataset \"./discretized.csv\" --domain \"./domain.json\" --save \"./satgpa_discretized_synthetic.csv\" --epsilon 10')\n",
+        "#!python ./nist-synthetic-data-2021/extensions/adaptive_grid.py --dataset \"./discretized.csv\" --domain \"./domain.json\" --save \"./satgpa_discretized_synthetic.csv\" --epsilon 10"
       ],
       "metadata": {
         "colab": {
@@ -428,8 +454,8 @@
     {
       "cell_type": "code",
       "source": [
-        "#os.system('python ./nist-synthetic-data-2021/extensions/transform.py --transform undo_discretize --df \"./satgpa_discretized_synthetic.csv\" --schema \"./satgpa_parameters.json\"')\n",
-        "!python ./nist-synthetic-data-2021/extensions/transform.py --transform undo_discretize --df \"./\" --schema \"./satgpa_parameters.json\""
+        "os.system('python ./nist-synthetic-data-2021/extensions/transform.py --transform undo_discretize --df \"./satgpa_discretized_synthetic.csv\" --schema \"./satgpa_parameters.json\"')\n",
+        "#!python ./nist-synthetic-data-2021/extensions/transform.py --transform undo_discretize --df \"./\" --schema \"./satgpa_parameters.json\""
       ],
       "metadata": {
         "colab": {
