--- a/Code/Python/PGM_MINUTEMEN_APPROACH/Jupyther/dp_pgm_minutemen_istat_synt_challenge.ipynb
+++ b/Code/Python/PGM_MINUTEMEN_APPROACH/Jupyther/dp_pgm_minutemen_istat_synt_challenge.ipynb
@@ -42,7 +42,7 @@
       "metadata": {
         "id": "HS6fWorwEiAB"
       },
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -57,12 +57,12 @@
     {
       "cell_type": "code",
       "source": [
-        "benchmark = True"
+        "benchmark = False"
       ],
       "metadata": {
         "id": "6BkBAOfMnJgp"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -86,9 +86,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CcTw49-X3QLt",
-        "outputId": "51072de7-75f6-4bea-ead7-8e80ee2ec255"
+        "outputId": "74c43aa6-e440-442f-beee-a4242bd6e26d"
       },
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,9 +133,9 @@
           "height": 87
         },
         "id": "9O_yLLQA3thl",
-        "outputId": "f7d2186b-096c-451e-e61b-6f76e18642b9"
+        "outputId": "c7b3559f-b9e2-429c-fce1-b074bde963bb"
       },
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -148,7 +148,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 6
         }
       ]
     },
@@ -172,13 +172,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "N9Hu52yqkKsu",
-        "outputId": "693aadb4-e6cc-4bf3-836b-5cf984061154"
+        "outputId": "8e8d8475-db86-4f12-b53e-3112e4b53234"
       },
       "outputs": [
         {
@@ -189,7 +189,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 7
         }
       ],
       "source": [
@@ -207,9 +207,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HHpg3YEwmErS",
-        "outputId": "d6c05caa-b540-436c-8623-b164a2b01db0"
+        "outputId": "adc10158-9301-4a1c-8c1f-52ef88d702a2"
       },
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -219,7 +219,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 8
         }
       ]
     },
@@ -233,9 +233,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DffXF880mgxj",
-        "outputId": "76bb0335-2a5f-42ce-c6c6-4525a00e7d60"
+        "outputId": "2627372b-c3fc-46f7-cd63-5aa36dea9ee7"
       },
-      "execution_count": 7,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -245,7 +245,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 9
         }
       ]
     },
@@ -259,9 +259,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "esUujxsqn-nZ",
-        "outputId": "a04ccac4-92fe-45d7-a366-ba97357bc1dd"
+        "outputId": "be032b2a-ad97-4fbd-90c7-e111f547d07a"
       },
-      "execution_count": 8,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -271,7 +271,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 10
         }
       ]
     },
@@ -307,7 +307,7 @@
       "metadata": {
         "id": "gif6H4EZvoNM"
       },
-      "execution_count": 9,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -323,39 +323,17 @@
       "cell_type": "code",
       "source": [
         "if benchmark == True: \n",
-        "  #os.system('python ./nist-synthetic-data-2021/extensions/schemagen.py ./adult.csv --max_categorical 40')\n",
-        "  !python ./nist-synthetic-data-2021/extensions/schemagen.py /content/nist-synthetic-data-2021/extensions/datasets/raw/adult.csv --max_categorical 40\n",
+        "  os.system('python ./nist-synthetic-data-2021/extensions/schemagen.py ./adult.csv --max_categorical 40')\n",
+        "  #!python ./nist-synthetic-data-2021/extensions/schemagen.py /content/nist-synthetic-data-2021/extensions/datasets/raw/adult.csv --max_categorical 40\n",
         "else:\n",
         "  os.system('python ./nist-synthetic-data-2021/extensions/schemagen.py ./satgpa.csv --max_categorical 100')\n",
         "  #!python ./nist-synthetic-data-2021/extensions/schemagen.py ./satgpa.csv --max_categorical 100"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "OK1ehZ-AmjBy",
-        "outputId": "f96b7aed-871e-4bfa-fffe-aa957cdfd128"
+        "id": "OK1ehZ-AmjBy"
       },
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "ERROR:schemagen.schemagen:Caught an error when trying to parse schema:\n",
-            "Traceback (most recent call last):\n",
-            "  File \"/content/nist-synthetic-data-2021/extensions/schemagen/schemagen.py\", line 144, in read_and_parse_csv\n",
-            "    geographical_columns=geographical_columns\n",
-            "  File \"/content/nist-synthetic-data-2021/extensions/schemagen/schemagen.py\", line 472, in _build_schema\n",
-            "    (datatype, min_value, max_value) = self._get_series_dtype(series)\n",
-            "  File \"/content/nist-synthetic-data-2021/extensions/schemagen/schemagen.py\", line 565, in _get_series_dtype\n",
-            "    min_value = series.min().item()\n",
-            "AttributeError: 'int' object has no attribute 'item'\n",
-            "ERROR:root:Unable to load the specified CSV file.\n",
-            "ERROR:root:Unable to generate schema. Please review logs for details.\n"
-          ]
-        }
-      ]
+      "execution_count": 12,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -373,10 +351,25 @@
         "#!python ./nist-synthetic-data-2021/extensions/transform.py --transform discretize --df \"./satgpa.csv\" --schema \"./satgpa_parameters.json\" --output_dir \"./\""
       ],
       "metadata": {
-        "id": "w687fFK28E2g"
+        "id": "w687fFK28E2g",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e498eeae-aab0-486f-c406-2ab9646b9f93"
       },
-      "execution_count": 10,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -388,9 +381,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "weF7EvE0BjNL",
-        "outputId": "c44f87ac-40c0-439d-bf8b-a0d697eebe25"
+        "outputId": "41e903d2-bced-428c-fa5b-c13fe1c2281e"
       },
-      "execution_count": 11,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -400,7 +393,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 14
         }
       ]
     },
@@ -424,30 +417,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "n62fUTUoCUbY",
-        "outputId": "b4f8996a-c0f7-4507-b99b-ecd30e2bd713"
+        "outputId": "ac11b34e-fce1-452b-9118-612d8a605d70"
       },
-      "execution_count": 12,
+      "execution_count": 15,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "Measuring ('sex',), L2 sensitivity 1.000000\n",
-            "Measuring ('fy_gpa',), L2 sensitivity 1.000000\n",
-            "Measuring ('sat_sum',), L2 sensitivity 1.000000\n",
-            "Measuring ('sat_v',), L2 sensitivity 1.000000\n",
-            "Measuring ('hs_gpa',), L2 sensitivity 1.000000\n",
-            "Measuring ('sat_m',), L2 sensitivity 1.000000\n",
-            "\n",
-            "Measuring ('sex', 'hs_gpa'), L2 sensitivity 1.000000\n",
-            "Measuring ('sat_v', 'sat_sum'), L2 sensitivity 1.000000\n",
-            "Measuring ('sat_m', 'sat_sum'), L2 sensitivity 1.000000\n",
-            "Measuring ('sat_sum', 'hs_gpa'), L2 sensitivity 1.000000\n",
-            "Measuring ('hs_gpa', 'fy_gpa'), L2 sensitivity 1.000000\n",
-            "\n",
-            "Post-processing with Private-PGM, will take some time...\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
         }
       ]
     },
@@ -464,7 +446,7 @@
         "id": "gtOjeaw7Z1vc",
         "outputId": "ef31cc34-ca23-4465-b5c5-0e30fb5bab8f"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
