--- a/Code/Python/SDGYM/Jupyther/gan_sdgym_istat_synt_challenge.ipynb
+++ b/Code/Python/SDGYM/Jupyther/gan_sdgym_istat_synt_challenge.ipynb
@@ -53,7 +53,8 @@
       "cell_type": "code",
       "source": [
         "os.system('pip install gdown')\n",
-        "os.system('pip install sdgym')"
+        "os.system('pip install sdgym')\n",
+        "os.system('pip install pandas')"
       ],
       "metadata": {
         "colab": {
